--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-VITE_API_BASE_URL=https://3d887d16bb76.ngrok-free.app
+VITE_API_BASE_URL=https://brief-backend-v8w9.onrender.com
 VITE_FRONTEND_ORIGIN=http://localhost:8080
+ENVIRONMENT=development
