--- a/package.json
+++ b/package.json
@@ -8,7 +8,16 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "cap:sync": "cap sync",
+    "cap:copy": "cap copy",
+    "cap:update": "cap update",
+    "cap:open:android": "cap open android",
+    "cap:open:ios": "cap open ios",
+    "android:build": "npm run build && cap sync && cap open android",
+    "ios:build": "npm run build && cap sync && cap open ios",
+    "android:dev": "npm run build:dev && cap sync && cap open android",
+    "ios:dev": "npm run build:dev && cap sync && cap open ios"
   },
   "dependencies": {
     "@capacitor/android": "^8.0.0",
